# applied-ai-engineering-samples

./: .gitignore  .stylelintrc.json  404.html  CODEOWNERS  Dockerfile  OWNERS  README.md  bigquery_nl2sql.py  cloudbuild-destroy.yaml  cloudbuild.yaml  config.ini  env.vars  generate_firebase_config.sh  index.html  main.py  mkdocs.sh  mkdocs.yml  opendataqna.py  package-lock.json  package.json  pyproject.toml  pyproject3.12  requirements.txt  setup.py  sitemap.xml  spelling  talktodata.py
.github/: PULL_REQUEST_TEMPLATE.md
agents/: BuildSQLAgent.py  DebugSQLAgent.py  EmbedderAgent.py  ResponseAgent.py  ValidateSQLAgent.py  VisualizeAgent.py  __init__.py  core.py
ai-infrastructure/: README.md  index.html
assets/: README.md
backend/: Dockerfile  main.py  requirements.txt
genai-on-vertex-ai/gemini/evals_playbook/: README.md  config.ini  index.html  pyproject.toml
genai-on-vertex-ai/gemini/evals_playbook/bigquery_sqls/: evals_bigquery.sql
genai-on-vertex-ai/gemini/evals_playbook/needle_in_a_haystack/: README.md
genai-on-vertex-ai/gemini/evals_playbook/needle_in_a_haystack/needlehaystack/: llm_needle_haystack_tester.py  run.py
genai-on-vertex-ai/gemini/evals_playbook/needle_in_a_haystack/needlehaystack/providers/: Gemini_prompt.txt  anthropic.py
genai-on-vertex-ai/gemini/evals_playbook/notebooks/: 0_gemini_evals_playbook_setup.ipynb  1_gemini_evals_playbook_evaluate.ipynb  2_gemini_evals_playbook_gridsearch.ipynb
genai-on-vertex-ai/gemini/evals_playbook/notebooks/0_gemini_evals_playbook_setup/: index.html
genai-on-vertex-ai/gemini/evals_playbook/notebooks/1_gemini_evals_playbook_evaluate/: index.html
genai-on-vertex-ai/gemini/evals_playbook/notebooks/2_gemini_evals_playbook_gridsearch/: index.html
genai-on-vertex-ai/gemini/evals_playbook/notebooks/assets/: run1_run2_compare.json
genai-on-vertex-ai/gemini/evals_playbook/utils/: config.py  evals_playbook.py
(+1368 files in other folders)
