[tool.poetry]
name = "evals"
version = "0.1.0"
description = ""
authors = ["Rajesh Thallam <rthallam@google.com>", "Sri Lingamneni <srilakshmil@google.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
google-cloud-bigquery = {extras = ["all"], version = "^3.25.0"}
google-cloud-aiplatform = "^1.60.0"
nest_asyncio = "^1.6.0"  
sqlalchemy = "^2.0.31"
sqlalchemy-bigquery = "^1.11.0"
google-cloud-bigquery-storage = "^2.25.0"
datasets = "^2.20.0"
db-dtypes = "^1.2.0"
pandas-gbq = "^0.23.1"
llm-comparator = "^0.1"
gcsfs = "^2023.5.0" 
scikit-learn = "^1.3.0" 

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
